welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: illegal start of simple pattern
for (var i <- 1 to 4) {
     ^Source:6: error: '<-' expected but '}' found.
	}
        ^