welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
left()
for (var i <- 1 to 4) {
	forward()
}